BeautifulDoxygenDoc(doc): Adding man pages

--- a/docs/doxygen_hdr/output/latex/classDefine.tex
+++ b/docs/doxygen_hdr/output/latex/classDefine.tex
@@ -2,8 +2,7 @@
 \label{classDefine}\index{Define@{Define}}
 
 
-Collaboration diagram for Define\+:
-\nopagebreak
+Collaboration diagram for Define\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
